--- a/modal1.css
+++ b/modal1.css
@@ -68,7 +68,8 @@ button:hover {
 
 /* Modal Content/Box */
 .modal-content {
-  background-color: #fefefe;
+  background-color: #00011e;
+  border-radius: 20px;
   margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
   border: 1px solid #888;
   width: 80%; /* Could be more or less, depending on screen size */
